	Added "Diff contains" filter to search for commits containing text
	Added support for Beyond Compare 3
	Added combobox to branch in browse dialog to allow quick switching between local branches
	Added shortcuts 's' and 'u' to stage/unstage files in commit dialog
	Added images to file tree
	Added Ctrl + Enter shortcut to commit quickly
	The statistics plugin does its calculates in background thread
	Doubleclick on file in commit dialog (un)stages the file
	Improved merge conflict handling
	Various bugfixes and minor changes
	
Version 2.08
	Fixed bug: installing MSysGit or KDiff3 using complete settup doesn't work when UAC is enabled
	Fixed bug: slashes in tag name not supported
	Fixed bug: filtering does not work with characters outside ASCII range
	Fixed bug: bash does not work using Linux or cygwin
	Fixed bug: "gitk" and "git gui" does not work on linux
	Fixed bug: file history does not work when started from file tree in browse dialog
	Added shortcut key F3 to open diff tool op file
	Added stash count to toolbar (is turned off by default)

Version 2.07
	Fixed issue 263: spanish translation added
	Fixed issue 262: application crashes on system where only .Net 4.0 is installed
	Fixed issue 255, 257, 261, 266: application crashes in Windows 7
	Fixed bug: Git Gui & GitK not started in working dir
	Fixed bug: Application sometimes closes for no reason
	Fixed bug: GitExtensions now uses .gitattributes to determine if a file is binary
	Added bisect function
	
Version 2.06
	Fixed issue 218: GitCommandLog now in LIFO order
	Fixed issue 235, 242 and 248: GitExtensions hangs when loading putty key into pageant
	Fixed bug: comboboxes affected each other in clone dialog
	Fixed bug: sporadic crashes during checkout process when status is visible in toolbar
	Fixed bug: virtual commits showing uncommitted and staged changes are only visible when needed
	Added checkbox to allow interactive rebase
	Added support for Windows 7 taskbar progress bar display